--- a/examples/app_endfire_demo/.cproject
+++ b/examples/app_endfire_demo/.cproject
@@ -215,6 +215,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/lib_mic_array}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/lib_mic_array_support/api}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/lib_mic_array/doc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/fir_decimators}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1179581046" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -557,6 +558,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/lib_mic_array}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/lib_mic_array_support/api}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/lib_mic_array/doc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/fir_decimators}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.1139129011" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -905,6 +907,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/lib_mic_array}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/lib_mic_array_support/api}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/lib_mic_array/doc}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/fir_decimators}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.137647591" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
