--- a/examples/app_lores_DAS_fixed/.cproject
+++ b/examples/app_lores_DAS_fixed/.cproject
@@ -196,6 +196,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_support/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_support/api}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_support}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/fir_decimators}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.1311361443" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -519,6 +520,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_support/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_support/api}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_support}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/fir_decimators}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.1954376627" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -848,6 +850,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_support/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_support/api}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array_support}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/fir_decimators}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.1493317425" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
