--- a/tests/test_1v0_hw_bringup/.cproject
+++ b/tests/test_1v0_hw_bringup/.cproject
@@ -230,6 +230,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_ethernet}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_otpinfo/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_ethernet/api}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/fir_decimators}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.xc.compiler.input.573551318" name="XC" superClass="com.xmos.cdt.xc.compiler.input"/>
 							</tool>
@@ -587,6 +588,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_ethernet}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_otpinfo/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_ethernet/api}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/fir_decimators}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.c.compiler.input.c.1170647755" name="C" superClass="com.xmos.cdt.c.compiler.input.c"/>
 							</tool>
@@ -950,6 +952,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_ethernet}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_otpinfo/src}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_ethernet/api}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/lib_mic_array/src/fir_decimators}&quot;"/>
 								</option>
 								<inputType id="com.xmos.cdt.cxx.compiler.input.cpp.84795583" name="C++" superClass="com.xmos.cdt.cxx.compiler.input.cpp"/>
 							</tool>
