--- a/examples/app_mic_calibration/.project
+++ b/examples/app_mic_calibration/.project
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>app_time_domain_mvdr</name>
+	<name>app_mic_calibration</name>
 	<comment></comment>
 	<projects>
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>com.xmos.cdt.core.ProjectInfoSyncBuilder</name>
+			<name>com.xmos.cdt.core.LegacyProjectCheckerBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>com.xmos.cdt.core.LegacyProjectCheckerBuilder</name>
+			<name>com.xmos.cdt.core.ProjectInfoSyncBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
