--- a/examples/app_mic_calibration/Makefile
+++ b/examples/app_mic_calibration/Makefile
@@ -1,15 +1,15 @@
 # The TARGET variable determines what target system the application is
 # compiled for. It either refers to an XN file in the source directories
 # or a valid argument for the --target option when compiling
-TARGET = XCORE-200-EXPLORER
+TARGET = MIC-ARRAY-1V0
 
 # The APP_NAME variable determines the name of the final .xe file. It should
 # not include the .xe postfix. If left blank the name will default to
 # the project name
-APP_NAME = app_time_domain_mvdr
+APP_NAME = app_mic_calibration
 
 # The USED_MODULES variable lists other module used by the application.
-USED_MODULES = lib_i2c lib_i2s/lib_i2s lib_mic_array lib_mic_array_support
+USED_MODULES = lib_mic_array lib_mic_array_support
 
 # The flags passed to xcc when building the application
 # You can also set the following to override flags for a particular language:
