--- a/examples/app_hires_DAS_fixed/Makefile
+++ b/examples/app_hires_DAS_fixed/Makefile
@@ -9,14 +9,14 @@ TARGET = MIC-ARRAY-1V0
 APP_NAME = example_hires_DAS_fixed
 
 # The USED_MODULES variable lists other module used by the application.
-USED_MODULES = lib_mic_array lib_mic_array_board_support
+USED_MODULES = lib_i2c lib_i2s lib_mic_array lib_mic_array_board_support
 
 # The flags passed to xcc when building the application
 # You can also set the following to override flags for a particular language:
 # XCC_XC_FLAGS, XCC_C_FLAGS, XCC_ASM_FLAGS, XCC_CPP_FLAGS
 # If the variable XCC_MAP_FLAGS is set it overrides the flags passed to
 # xcc for the final link (mapping) stage.
-XCC_FLAGS = -O2 -g 
+XCC_FLAGS = -O2 -g
 
 # The XCORE_ARM_PROJECT variable, if set to 1, configures this
 # project to create both xCORE and ARM binaries.
