added first pass at max frame value plus mic_capture project

--- a/tests/mic_capture/Makefile
+++ b/tests/mic_capture/Makefile
@@ -9,7 +9,7 @@ TARGET = MIC-ARRAY-1V0
 APP_NAME = mic_capture
 
 # The USED_MODULES variable lists other module used by the application.
-USED_MODULES = 
+USED_MODULES = lib_dsp lib_mic_array_board_support
 
 # The flags passed to xcc when building the application
 # You can also set the following to override flags for a particular language:
